<resources>
    <string name="km">%1$d km</string>
    <string name="logout">Logout</string>
    <string name="server">Server</string>
    <string name="distance">Distance</string>
</resources>