<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_party.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logo_margin_top_bottom"
                android:layout_marginBottom="@dimen/logo_margin_top_bottom"
                android:src="@drawable/logo_light"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/username_entry"
                style="@style/EditText"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_username"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@={viewModel.username}"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/password_entry"
                style="@style/EditText"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="@dimen/button_side_margin"
                android:layout_marginRight="@dimen/button_side_margin"
                android:backgroundTint="@color/button_color"
                android:onClick="@{viewModel::onLoginButtonClicked}"
                android:text="@string/login" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
