...
                android:paddingBottom="2dip"
                android:layout_weight="1"
                android:text="DISTANCE"/>
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </LinearLayout>


...
